--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -32,4 +32,4 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GIST_ID: ${{ secrets.GIST_ID }}
-          USERNAME: xo4813
+          USERNAME: ${{ github.actor }}
